Remove research links and page, remove news links except bottom of index.html, need to replace with publications before removing news page

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,44 +2,44 @@
 
   <p></p>
   <p></p>
-	<h4>Recent News</h4>
+	<!-- <h4>Recent News</h4>
 		{% for post in site.posts limit:5 %}
 		<h5><a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a></h5>
 		<h6>{{ post.date | date: "%B %d, %Y" }}</h6>
 	{% endfor %}
 	<p>
 		<a class="green" href="{{ site.url }}/news/">see all news &raquo;</a>
-	</p>
-
-  <div class="social">
-      <i class="icon-twitter"></i><a href="http://twitter.com/TheWallLab">follow on twitter</a>
-      <i class="icon-facebook-squared"></i><a href="http://facebook.com/TheWallLab">follow on facebook</a>
+	</p> -->
+  
+  <div id="projects-menu">
+    <a href="{{ site.url }}/projects/"><h3>Projects</h3></a>
+    <ul>
+      <li><a href="{{ site.url }}/projects/bigpicture/">Big Picture</a> </li>
+      <li><a href="{{ site.url }}/projects/guess-what/">Guess What?</a> </li>
+      <li><a href="{{ site.url }}/projects/autism-therapy-on-glass/">Autism Therapy on Glass</a> </li>
+      <li><a href="{{ site.url }}/projects/ihart/">iHart</a> </li>
+      <li><a href="{{ site.url }}/projects/gapmap/">GapMap</a> </li>
+      <li><a href="{{ site.url }}/projects/microbiome-autism/">The Gut Microbiome in Autism</a> </li>
+      <li><a href="{{ site.url }}/projects/6000exomes/">NGS Large-Scale Variant Detection in Autism</a> </li>
+      <li><a href="{{ site.url }}/projects/neuroinformatics/">Neuroinformatics</a> </li>
+      <li><a href="{{ site.url }}/projects/machinelearning/">Machine Learning Diagnostic Classifiers</a> </li>
+      <li><a href="{{ site.url }}/projects/dmcsurvey/">DMC Survey</a> </li>
+      <li><a href="{{ site.url }}/projects/wearablepsychiatry/">Wearable Psychiatry</a> </li>
+      <li><a href="{{ site.url }}/projects/connectome/">Connectome</a> </li>
+      <li><a href="{{ site.url }}/projects/sysmed/">SysMed</a> </li>
+      <li><a href="{{ site.url }}/projects/homevideoproject/">Home Video Project</a> </li>
+      <li><a href="{{ site.url }}/projects/route66/">Route 66 to Autism</a> </li>
+      <li><a href="{{ site.url }}/projects/genehawk/">Genehawk</a> </li>
+      <li><a href="{{ site.url }}/projects/genotator/">Genotator</a> </li>
+      <li><a href="{{ site.url }}/projects/cosmos/">Cosmos</a> </li>
+      <li><a href="{{ site.url }}/projects/roundup/">Roundup</a> </li>
+    </ul>
+    
   </div>
-
-<div id="projects-menu">
-  <a href="{{ site.url }}/projects/"><h3>Projects</h3></a>
-  <ul>
-  <li><a href="{{ site.url }}/projects/bigpicture/">Big Picture</a> </li>
-  <li><a href="{{ site.url }}/projects/guess-what/">Guess What?</a> </li>
-  <li><a href="{{ site.url }}/projects/autism-therapy-on-glass/">Autism Therapy on Glass</a> </li>
-  <li><a href="{{ site.url }}/projects/ihart/">iHart</a> </li>
-  <li><a href="{{ site.url }}/projects/gapmap/">GapMap</a> </li>
-  <li><a href="{{ site.url }}/projects/microbiome-autism/">The Gut Microbiome in Autism</a> </li>
-  <li><a href="{{ site.url }}/projects/6000exomes/">NGS Large-Scale Variant Detection in Autism</a> </li>
-  <li><a href="{{ site.url }}/projects/neuroinformatics/">Neuroinformatics</a> </li>
-  <li><a href="{{ site.url }}/projects/machinelearning/">Machine Learning Diagnostic Classifiers</a> </li>
-  <li><a href="{{ site.url }}/projects/dmcsurvey/">DMC Survey</a> </li>
-  <li><a href="{{ site.url }}/projects/wearablepsychiatry/">Wearable Psychiatry</a> </li>
-  <li><a href="{{ site.url }}/projects/connectome/">Connectome</a> </li>
-  <li><a href="{{ site.url }}/projects/sysmed/">SysMed</a> </li>
-  <li><a href="{{ site.url }}/projects/homevideoproject/">Home Video Project</a> </li>
-  <li><a href="{{ site.url }}/projects/route66/">Route 66 to Autism</a> </li>
-  <li><a href="{{ site.url }}/projects/genehawk/">Genehawk</a> </li>
-  <li><a href="{{ site.url }}/projects/genotator/">Genotator</a> </li>
-  <li><a href="{{ site.url }}/projects/cosmos/">Cosmos</a> </li>
-  <li><a href="{{ site.url }}/projects/roundup/">Roundup</a> </li>
-  </ul>
-
-</div>
+  
+  <div class="social">
+    <i class="icon-twitter"></i><a href="http://twitter.com/TheWallLab">follow on twitter</a>
+    <i class="icon-facebook-squared"></i><a href="http://facebook.com/TheWallLab">follow on facebook</a>
+  </div>
 
 </section>
