--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,8 +2,8 @@
   <h4 ><a href="{{ site.url }}/">The Wall Lab at Stanford University</a></h4>
   <nav>
     <ul class="nav-collapse">
-      <li><a class="icon-doc" href="{{ site.url }}/news/">news</a></li>
-      <li><a class="icon-beaker" href="{{ site.url }}/research/">research</a></li>
+      <!-- <li><a class="icon-doc" href="{{ site.url }}/news/">news</a></li> -->
+      <!-- <li><a class="icon-beaker" href="{{ site.url }}/research/">research</a></li> -->
       <li><a class="icon-users" href="{{ site.url }}/people/">people</a></li>
       <li><a class="icon-edit" href="{{ site.url }}/publications/">publications</a></li>
       <li> <a class="icon-stethoscope" href="{{ site.url }}/projects/">projects</a></li>
@@ -19,12 +19,12 @@
   <nav>
     <ul class="horizontal">
       <li id="logo-thing"> <a id="logo" title="The Wall Lab at Stanford University" href="{{ site.url }}/"></a>  </li>
-      <li> <a class="light-blue icon-phone" href="#" id="contact-button">contact us</a> </li>
-      <li> <a class="orange icon-edit" href="{{ site.url }}/publications/">publications</a> </li>
-      <li> <a class="yellow icon-beaker" href="{{ site.url }}/research/">research</a> </li>
       <li> <a class="violet icon-users" href="{{ site.url }}/people/">people</a> </li>
+      <li> <a class="orange icon-edit" href="{{ site.url }}/publications/">publications</a> </li>
       <li> <a class="magenta icon-stethoscope" href="{{ site.url }}/projects/">projects</a></li>
-      <li> <a class="green icon-doc" href="{{ site.url }}/news/">news</a></li>
+      <li> <a class="light-blue icon-phone" href="#" id="contact-button">contact us</a> </li>
+      <!-- <li> <a class="yellow icon-beaker" href="{{ site.url }}/research/">projects</a> </li> -->
+      <!-- <li> <a class="green icon-doc" href="{{ site.url }}/news/">news</a></li> -->
     </ul>
 </header>
 
