--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,16 +19,16 @@
 			<li>
 				<a href="http://psychiatry.stanford.edu/" target="_blank">Psychiatry at Stanford</a>
 			</li>
-			<li>
+			<!--<li>
 				<a href="http://cehg.stanford.edu/" target="_blank">CEHG at Stanford</a>
-			</li>
+			</li> -->
 
 		</ul>
 		</div>
 
 		<div class="quarter">
 		<!--	<h3>links</h3>-->
-			<ul class="list-unstyled">
+			<!-- <ul class="list-unstyled">
 
 				<li>
 					<a href="{{ site.url }}/projects/guess-what/">Guess What?</a>
@@ -52,7 +52,7 @@
 					<a href="{{ site.url }}/projects/machinelearning">Machine Learning Diagnostic Classifiers</a>
 				</li>
 
-			</ul>
+			</ul> -->
 		</div>
 
 <!--
@@ -86,13 +86,15 @@
 			<li>
 				<a href="{{ site.url }}/about">About the Wall Lab</a>
 			</li>
-						<li>
+			<!--
+			<li>
 				<a href="{{ site.url }}/directions">Directions</a>
 			</li>
 
 			<li>
 				<a href="{{ site.url }}/openings">Lab Openings</a>
 			</li>
+			-->
 
 		</ul>
 	</div>
