Remove the Latest News sections from the home page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
       <!-- <li><a class="icon-beaker" href="{{ site.url }}/research/">research</a></li> -->
       <li> <a class="icon-phone" href="{{ site.url }}/contact">contact us</a> </li>
       <li><a class="icon-users" href="{{ site.url }}/people/">people</a></li>
-      <li><a class="icon-edit" href="{{ site.url }}/publications/">publications</a></li>
+      <li><a class="icon-edit" href="{{ site.url }}/publications/">news and pubs</a></li>
       <li> <a class="icon-stethoscope" href="{{ site.url }}/projects/">projects</a></li>
     </ul>
   </nav>
@@ -20,7 +20,7 @@
       <li id="logo-thing"> <a id="logo" title="The Wall Lab at Stanford University" href="{{ site.url }}/"></a>  </li>
       <li> <a class="light-blue icon-phone" href="#" id="contact-button">contact us</a> </li>
       <li> <a class="violet icon-users" href="{{ site.url }}/people/">people</a> </li>
-      <li> <a class="orange icon-edit" href="{{ site.url }}/publications/">publications</a> </li>
+      <li> <a class="orange icon-edit" href="{{ site.url }}/publications/">news and pubs</a> </li>
       <li> <a class="magenta icon-stethoscope" href="{{ site.url }}/projects/">projects</a></li>
       <!-- <li> <a class="yellow icon-beaker" href="{{ site.url }}/research/">projects</a> </li> -->
       <!-- <li> <a class="green icon-doc" href="{{ site.url }}/news/">news</a></li> -->
