--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -14,25 +14,28 @@
   <div id="projects-menu">
     <a href="{{ site.url }}/projects/"><h3>Projects</h3></a>
     <ul>
-      <!--<li><a href="{{ site.url }}/projects/bigpicture/">Big Picture</a> </li>-->
-      <li><a href="{{ site.url }}/projects/guess-what/">Guess What?</a> </li>
-      <li><a href="{{ site.url }}/projects/autism-therapy-on-glass/">Autism Therapy on Glass</a> </li>
-      <li><a href="{{ site.url }}/projects/ihart/">iHart</a> </li>
-      <li><a href="{{ site.url }}/projects/gapmap/">GapMap</a> </li>
-      <!--<li><a href="{{ site.url }}/projects/microbiome-autism/">The Gut Microbiome in Autism</a> </li>-->
-      <li><a href="{{ site.url }}/projects/6000exomes/">NGS Large-Scale Variant Detection in Autism</a> </li>
-      <!--<li><a href="{{ site.url }}/projects/neuroinformatics/">Neuroinformatics</a> </li>-->
-      <li><a href="{{ site.url }}/projects/machinelearning/">Machine Learning Diagnostic Classifiers</a> </li>
-      <!--<li><a href="{{ site.url }}/projects/dmcsurvey/">DMC Survey</a> </li>-->
-      <!--<li><a href="{{ site.url }}/projects/wearablepsychiatry/">Wearable Psychiatry</a> </li>-->
-      <!--<li><a href="{{ site.url }}/projects/connectome/">Connectome</a> </li>-->
-      <!--<li><a href="{{ site.url }}/projects/sysmed/">SysMed</a> </li>-->
-      <!--<li><a href="{{ site.url }}/projects/homevideoproject/">Home Video Project</a> </li>-->
-      <!--<li><a href="{{ site.url }}/projects/route66/">Route 66 to Autism</a> </li>-->
-      <!--<li><a href="{{ site.url }}/projects/genehawk/">Genehawk</a> </li>-->
-      <!--<li><a href="{{ site.url }}/projects/genotator/">Genotator</a> </li>-->
-      <!--<li><a href="{{ site.url }}/projects/cosmos/">Cosmos</a> </li>-->
-      <!--<li><a href="{{ site.url }}/projects/roundup/">Roundup</a> </li>-->
+		<!--<li><a href="{{ site.url }}/projects/bigpicture/">Big Picture</a> </li>-->
+		<li><a href="{{ site.url }}/projects/guess-what/">Guess What?</a> </li>
+		<li><a href="{{ site.url }}/projects/autism-therapy-on-glass/"><h2>Autism Therapy on Glass</h2></a></li>
+		<li><a href="{{ site.url }}/projects/gapmap/"><h2>GapMap</h2></a></li>
+		<li><a href="https://hawaiidigitalhealthlab.com/"><h2>Collaboration with University of Hawaii’s Digital Health Lab</h2></a></li>
+		<li><a href="{{ site.url }}/projects/genome_algorithms/"><h2>Genomic Algorithms for Identifying Autism</h2></a></li>
+		<li><a href="{{ site.url }}/projects/ssse/"><h2>Systematic Sex-Biased Sequencing Errors</h2></a></li>
+		<!--<li><a href="{{ site.url }}/projects/ihart/">iHart</a> </li>-->
+		<!--<li><a href="{{ site.url }}/projects/microbiome-autism/">The Gut Microbiome in Autism</a> </li>-->
+		<!--<li><a href="{{ site.url }}/projects/6000exomes/">NGS Large-Scale Variant Detection in Autism</a> </li>-->
+		<!--<li><a href="{{ site.url }}/projects/neuroinformatics/">Neuroinformatics</a> </li>-->
+		<!--<li><a href="{{ site.url }}/projects/machinelearning/">Machine Learning Diagnostic Classifiers</a> </li>-->
+		<!--<li><a href="{{ site.url }}/projects/dmcsurvey/">DMC Survey</a> </li>-->
+		<!--<li><a href="{{ site.url }}/projects/wearablepsychiatry/">Wearable Psychiatry</a> </li>-->
+		<!--<li><a href="{{ site.url }}/projects/connectome/">Connectome</a> </li>-->
+		<!--<li><a href="{{ site.url }}/projects/sysmed/">SysMed</a> </li>-->
+		<!--<li><a href="{{ site.url }}/projects/homevideoproject/">Home Video Project</a> </li>-->
+		<!--<li><a href="{{ site.url }}/projects/route66/">Route 66 to Autism</a> </li>-->
+		<!--<li><a href="{{ site.url }}/projects/genehawk/">Genehawk</a> </li>-->
+		<!--<li><a href="{{ site.url }}/projects/genotator/">Genotator</a> </li>-->
+		<!--<li><a href="{{ site.url }}/projects/cosmos/">Cosmos</a> </li>-->
+		<!--<li><a href="{{ site.url }}/projects/roundup/">Roundup</a> </li>-->
     </ul>
     
   </div>
