--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -15,12 +15,12 @@
     <a href="{{ site.url }}/projects/"><h3>Projects</h3></a>
     <ul>
 		<!--<li><a href="{{ site.url }}/projects/bigpicture/">Big Picture</a> </li>-->
-		<li><a href="{{ site.url }}/projects/guess-what/">Guess What?</a> </li>
-		<li><a href="{{ site.url }}/projects/autism-therapy-on-glass/"><h2>Autism Therapy on Glass</h2></a></li>
-		<li><a href="{{ site.url }}/projects/gapmap/"><h2>GapMap</h2></a></li>
-		<li><a href="https://hawaiidigitalhealthlab.com/"><h2>Collaboration with University of Hawaii’s Digital Health Lab</h2></a></li>
-		<li><a href="{{ site.url }}/projects/genome_algorithms/"><h2>Genomic Algorithms for Identifying Autism</h2></a></li>
-		<li><a href="{{ site.url }}/projects/ssse/"><h2>Systematic Sex-Biased Sequencing Errors</h2></a></li>
+		<li><a href="{{ site.url }}/projects/guess-what/">Guess What?</a></li>
+		<li><a href="{{ site.url }}/projects/autism-therapy-on-glass/">Autism Therapy on Glass</a></li>
+		<li><a href="{{ site.url }}/projects/gapmap/">GapMap</a></li>
+		<li><a href="https://hawaiidigitalhealthlab.com/">Collaboration with University of Hawaii’s Digital Health Lab</a></li>
+		<li><a href="{{ site.url }}/projects/genome_algorithms/">Genomic Algorithms for Identifying Autism</a></li>
+		<li><a href="{{ site.url }}/projects/ssse/">Systematic Sex-Biased Sequencing Errors</a></li>
 		<!--<li><a href="{{ site.url }}/projects/ihart/">iHart</a> </li>-->
 		<!--<li><a href="{{ site.url }}/projects/microbiome-autism/">The Gut Microbiome in Autism</a> </li>-->
 		<!--<li><a href="{{ site.url }}/projects/6000exomes/">NGS Large-Scale Variant Detection in Autism</a> </li>-->
